Fix few lexing issues, actual program code

--- a/biblint/antlr/test.bib
+++ b/biblint/antlr/test.bib
@@ -7,6 +7,6 @@ mendeley-tags = {CHW Plant},
 number = {November},
 pages = {16--32},
 title = {{Upgrading Chilled-Water Systems}},
+year = 2009,
 volume = {51},
-year = {2009}
 }
